--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-firebase/app": "^15.1.1",
+    "@react-native-firebase/auth": "^15.1.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.7.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-elements": "^3.4.2",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-elements": "^4.0.0-rc.2",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
