--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^15.1.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.7.0",
+    "instagram-stories": "^1.2.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-elements": "^4.0.0-rc.2",
