--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@react-native-firebase/auth": "^15.1.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.7.0",
-    "instagram-stories": "^1.2.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-elements": "^4.0.0-rc.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-stories-media": "^0.0.7",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
