--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "react-native": "0.68.2",
     "react-native-elements": "^4.0.0-rc.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-media-controls": "^2.3.0",
+    "react-native-orientation": "^3.1.3",
     "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-slider": "^0.11.0",
     "react-native-stories-media": "^0.0.7",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^6.0.0-alpha.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
