--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ignore-warnings": "^0.2.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-elements": "^4.0.0-rc.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-media-controls": "^2.3.0",
